Basic articles bug-fix, Files plugin complete (needs testing, few additions, etc), modified layout to restrict image size from overflow.

--- a/Layout/Content/css/layout.css
+++ b/Layout/Content/css/layout.css
@@ -220,6 +220,11 @@ body
 {
 	margin: 0em 1em;
 }
+.AREA_CONTENT img
+{
+	max-width: 90%;
+	max-height: 90%;
+}
 .FOOTER
 {
 	font: normal small Arial;
